[gd_scene load_steps=2 format=3 uid="uid://5djgopggjinb"]

[ext_resource type="Script" uid="uid://jl1urulsp11s" path="res://scripts/components/follow_component.gd" id="1_quckm"]

[node name="FollowComponent" type="Node"]
script = ExtResource("1_quckm")

[node name="TargetAcquisitionTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[connection signal="timeout" from="TargetAcquisitionTimer" to="." method="_on_target_acquisition_timer_timeout"]
